--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   ],
   "main": "slugg.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha test -R spec"
+    "test": "./node_modules/.bin/mocha test -R spec",
+    "test-browser": "./node_modules/.bin/mocha-srv test"
   },
   "devDependencies": {
-    "mocha": "~1.7"
+    "mocha": "~1.7",
+    "mocha-srv": "~0.1",
+    "proclaim": "~1.2"
   },
   "repository": "git@github.com:bengourley/slugg.git",
   "author": "Ben Gourley",
